fix(abc:st): fix style misalignment in small screen

--- a/packages/theme/system/antd/_table.less
+++ b/packages/theme/system/antd/_table.less
@@ -54,7 +54,7 @@
     }
     .@{ant-prefix}-table {
       table {
-        width: auto !important;
+        width: 100% !important;
         table-layout: auto !important;
       }
       &-thead {
